--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@rollup/plugin-node-resolve": "15.0.2",
     "@rollup/plugin-terser": "0.4.3",
     "@rollup/plugin-typescript": "11.1.1",
+    "ajv-formats": "2.1.1",
     "codemirror": "6.0.1",
     "rollup": "3.23.0",
     "rollup-plugin-svelte": "7.1.5",
